[tool.poetry]
name = "activity-self-analisys"
version = "0.1.0"
description = ""
authors = ["ilim <ilim0t14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pathlib = "^1.0.1"
argparse = "^1.4.0"
tqdm = "^4.42.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.761"
isort = "^4.3.21"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
